--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,14 +18,14 @@
 
     <div class="home-menu">
         <div class="home-icon-con">
-            <a class="home-menu-icon" href="https://violettianjie.github.io/">田捷博客</a>
+            <a class="home-menu-icon" href="https://linfeng365.github.io/">林峰博客</a>
             <a class="home-follow" href="#" title="Contact Me">+</a>
         </div>
         <div class="home-contact">
-            <a href="http://weibo.com/violettianjie" target="_blank" style="margin-left:-5px;"><img src="https://cdn.gushihao.com/weibo.png" alt="" width="25"/></a>
-            <a href="https://violettianjie.github.io/blog/AboutMe.html" style="text-align:center;"><img src="https://cdn.gushihao.com/logo.png" alt="" width="22"/></a>
-            <a href="https://github.com/violettianjie" target="_blank" style="text-align:center;"><img src="https://cdn.gushihao.com/github.png" alt="" width="22"/></a>
-	    <a href="http://www.douban.com/people/jose11/" target="_blank"><img src="https://www.douban.com/favicon.ico" alt="" width="22"></a>
+            <a href="http://weibo.com/linfeng365" target="_blank" style="margin-left:-5px;"><img src="https://cdn.gushihao.com/weibo.png" alt="" width="25"/></a>
+            <a href="https://linfeng365.github.io/blog/AboutMe.html" style="text-align:center;"><img src="https://cdn.gushihao.com/logo.png" alt="" width="22"/></a>
+            <a href="https://github.com/linfeng365" target="_blank" style="text-align:center;"><img src="https://cdn.gushihao.com/github.png" alt="" width="22"/></a>
+	    <a href="http://www.douban.com/people/linfeng365/" target="_blank"><img src="https://www.douban.com/favicon.ico" alt="" width="22"></a>
         </div>
     </div>
 
