--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,25 +23,26 @@ layout: default
 	
 
     <div class="sidenav">
-        <h2><a href="https://violettianjie.github.io/">Blog</a></h2>
+        <h2><a href="https://linfeng365.github.io/">Blog</a></h2>
         <ul class="artical-list">
         {% for post in site.categories.blog limit:8 %}
             <li><a href="{{ post.url }}">{{ post.title }}</a></li>
         {% endfor %}
         </ul>
 
-        <h2><a href="https://violettianjie.github.io/Notes/">Notes</a></h2>
+        <h2><a href="https://linfeng365.github.io/Notes/">Notes</a></h2>
         <ul class="artical-list">
         {% for post in site.categories.notes limit:8 %}
             <li><a href="{{ post.url }}">{{ post.title }}</a></li>
         {% endfor %}
         </ul>
 
-        <h2><a href="https://violettianjie.github.io/Stories/">Stories</a></h2>
+        <h2><a href="https://linfeng365.github.io/Stories/">Stories</a></h2>
         <ul class="artical-list">
         {% for post in site.categories.stories limit:8 %}
             <li><a href="{{ post.url }}">{{ post.title }}</a></li>
         {% endfor %}
+        
         </ul>
     </div>
 </div>
