--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,13 +37,13 @@ layout: default
         {% endfor %}
         </ul>
 
-        <h2><a href="https://linfeng365.github.io/Stories/">Stories</a></h2>
+        <!-- <h2><a href="https://linfeng365.github.io/Stories/">Stories</a></h2>
         <ul class="artical-list">
         {% for post in site.categories.stories limit:8 %}
             <li><a href="{{ post.url }}">{{ post.title }}</a></li>
         {% endfor %}
         
-        </ul>
+        </ul> -->
     </div>
 </div>
 
