--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
         </div>
         <div class="home-contact">
             <a href="http://weibo.com/linfeng365" target="_blank" style="margin-left:-5px;"><img src="https://cdn.gushihao.com/weibo.png" alt="" width="25"/></a>
-            <a href="https://linfeng365.github.io/blog/AboutMe.html" style="text-align:center;"><img src="https://cdn.gushihao.com/logo.png" alt="" width="22"/></a>
+            <a href="https://linfeng365.github.io/blog/AboutMe.html" style="text-align:center;"><img src="/css/favicon.ico" alt="" width="22"/></a>
             <a href="https://github.com/linfeng365" target="_blank" style="text-align:center;"><img src="https://cdn.gushihao.com/github.png" alt="" width="22"/></a>
 	    <a href="http://www.douban.com/people/linfeng365/" target="_blank"><img src="https://www.douban.com/favicon.ico" alt="" width="22"></a>
         </div>
