--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <!--
     * Author: tianjie
@@ -14,48 +15,44 @@
     <link rel="alternate" type="application/atom+xml" title="Recent Entries" href="{{ site.feed }}" />
     <script src="/js/jquery-1.7.1.min.js" type="text/javascript"></script>
 </head>
-<body>
 
+<body>
     <div class="home-menu">
         <div class="home-icon-con">
             <a class="home-menu-icon" href="https://linfeng365.github.io/">林峰博客</a>
             <a class="home-follow" href="#" title="Contact Me">+</a>
         </div>
         <div class="home-contact">
+            <a href="http://zhihu.com/linfeng365" target="_blank" style="margin-left:-5px;"><img src="/zhihu.ico" alt="" width="25"/></a>
+            <a href="http://www.douban.com/people/linfeng365/" target="_blank"><img src="https://www.douban.com/favicon.ico" alt="" width="22"></a>
             <a href="http://weibo.com/linfeng365" target="_blank" style="margin-left:-5px;"><img src="https://cdn.gushihao.com/weibo.png" alt="" width="25"/></a>
             <a href="https://linfeng365.github.io/blog/AboutMe.html" style="text-align:center;"><img src="/favicon.ico" alt="" width="22"/></a>
             <a href="https://github.com/linfeng365" target="_blank" style="text-align:center;"><img src="https://cdn.gushihao.com/github.png" alt="" width="22"/></a>
-	    <a href="http://www.douban.com/people/linfeng365/" target="_blank"><img src="https://www.douban.com/favicon.ico" alt="" width="22"></a>
         </div>
     </div>
-
-	
-	{{ content }}
-    
-	
+    {{ content }}
     <script type="text/javascript">
-        $(function(){
-            $('.home-follow').click(function(e){
-                e.preventDefault();
+    $(function() {
+        $('.home-follow').click(function(e) {
+            e.preventDefault();
 
-                if($('.home-contact').is(':visible')){
-                    $('.home-contact').slideUp(100);
-                }else{
-                    $('.home-contact').slideDown(100);
-                }
-            });
-        })
-    </script> 
-	
-	<script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?1396df58c31015e11ac099fc446e2faa";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
-
+            if ($('.home-contact').is(':visible')) {
+                $('.home-contact').slideUp(100);
+            } else {
+                $('.home-contact').slideDown(100);
+            }
+        });
+    })
+    </script>
+    <script>
+    var _hmt = _hmt || [];
+    (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?1396df58c31015e11ac099fc446e2faa";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
 </body>
+
 </html>
