--- a/css/default.css
+++ b/css/default.css
@@ -40,6 +40,7 @@ a.external:hover {background-position:right -15px;}
 .entry-title,.entry-title a {font-size:26px;font-weight:bold;margin-bottom:6px;color:#000;text-align:center;word-wrap: break-word;}
 .entry-title a:hover {text-decoration:none;}
 .entry-date {text-align:center;color:#999;margin-bottom:50px;font-size:14px;}
+.entry-date-index {text-align:left;color:#999;margin-bottom:50px;font-size:14px;}
 
 h2 {font-size:22px;font-weight:bold;margin-bottom:25px;}
 h3 {font-size:18px;font-weight:bold;margin-bottom:25px;}
